Set JDK 11 as target/release JDK