@@ -11,9 +11,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-        <maven-compiler-plugin-version>3.12.0</maven-compiler-plugin-version>
+        <maven.compiler.release>11</maven.compiler.release>
+        <maven-compiler-plugin-version>3.13.0</maven-compiler-plugin-version>
         <maven-formatter-plugin-version>2.16.0</maven-formatter-plugin-version>
         <maven-surefire-plugin-version>2.22.2</maven-surefire-plugin-version>
         <maven-failsafe-plugin-version>3.0.0-M5</maven-failsafe-plugin-version>
@@ -69,11 +68,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin-version}</version>
-                <configuration>
-                    <source>17</source>
-                    <target>17</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
-                </configuration>
             </plugin>
             <plugin>
                 <!-- Auto-format source files -->
@@ -151,7 +145,7 @@
                     <printFailingErrors>true</printFailingErrors>
                     <sourceEncoding>utf-8</sourceEncoding>
                     <minimumTokens>100</minimumTokens>
-                    <targetJdk>17</targetJdk>
+                    <targetJdk>11</targetJdk>
                     <excludes>
                         <exclude>**/*Bean.java</exclude>
                         <exclude>**/generated/*.java</exclude>
